# savemem

./: .gitignore  README.md  data.sh  setup.sh  unzip_odv.py  unzip_ovo.py  unzip_streaming.py
evaluation/odvbench/: odvbench.py  odvbench.sh
evaluation/ovobench/: ovobench.py  ovobench.sh  score.py
evaluation/streamingbench/: score.py  streamingbench.py  streamingbench.sh
models/qwen-vl-utils/: pyproject.toml
models/qwen-vl-utils/src/qwen_vl_utils_savemem/: vision_process.py
models/qwen2-5-vl/: pyproject.toml
models/qwen2-5-vl/src/qwen2_5_vl_savemem/: __init__.py  configuration_qwen2_5_vl_savemem.py  modeling_qwen2_5_vl_savemem.py  processing_qwen2_5_vl_savemem.py  savemem.py  utils.py
qwen-vl-finetune/: pyproject.toml
qwen-vl-finetune/qwenvl/train/: argument.py  train_qwen.py  trainer.py
qwen-vl-finetune/scripts/: sft.sh
