[project]
name = "qwen-vl-finetune-savemem"
version = "0.0.0"
description = "Training scripts and configs for SaveMem Qwen2.5-VL"
requires-python = ">=3.10"
dependencies = [
    "qwen2-5-vl-savemem",
    "qwen-vl-utils-savemem",
    "transformers==4.50.0",
    "deepspeed==0.16.4",
    "accelerate==1.4.0",
    "datasets==2.16.1",
]

[project.optional-dependencies]
eval = [
    "ffmpeg-python==0.2.0",
    "moviepy==1.0.3",
]
train = ["wandb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["qwenvl"]
