[project]
name = "qwen-vl-utils-savemem"
version = "0.0.0"
description = "SaveMem vision helpers for Qwen2.5-VL (image/video preprocessing)"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = [
    "large language model",
    "vision language model",
    "qwen-vl",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["requests", "pillow", "av", "packaging", "torchvision"]

[project.optional-dependencies]
decord = ["decord"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
